修改pom.xml中的配置